# the-walking-furniture

./: CMakeLists.txt
the-walking-furniture/: CMakeLists.txt
the-walking-furniture/source/: main.cpp
vulkan/: CMakeLists.txt
vulkan/include/shitty-vulkan/: AllocationCallbacks.hpp  ApplicationInfo.hpp  Bool.hpp  CreateInstance.hpp  DestroyInstance.hpp  DeviceAddress.hpp  DeviceCreateFlags.hpp  DeviceQueueCreateFlags.hpp  DeviceQueueCreateInfo.hpp  DeviceSize.hpp  DeviceWaitIdle.hpp  EnumerateDeviceExtensionProperties.hpp  EnumerateInstanceLayerProperties.hpp  EnumerateInstanceVersion.hpp  EnumeratePhysicalDevices.hpp  Extent2d.hpp  Extent3d.hpp  Flags.hpp  GetDeviceProcAddr.hpp  GetPhysicalDeviceProperties2.hpp  GetPhysicalDeviceQueueFamilyProperties2.hpp  InputStructure.hpp  InstanceCreateFlags.hpp  InstanceCreateInfo.hpp  MakeVersion.hpp  Offset2d.hpp  OutputStructure.hpp  PhysicalDeviceFeatures.hpp  PhysicalDeviceProperties.hpp  PhysicalDeviceProperties2.hpp  PhysicalDeviceSparceProperties.hpp  PipelineStageFlags.hpp  QueueFamilyProperties.hpp  QueueFlagBits.hpp  QueueFlags.hpp  Result.hpp  SampleCountFlags.hpp  StructureType.hpp  VoidFunction.hpp  luidSize.hpp  (+4 more)
vulkan/include/shitty-vulkan/ext/: ValidationCheck.hpp  ValidationFeatureEnable.hpp  ValidationFeatures.hpp
vulkan/include/shitty-vulkan/khr/: EnumeratePhysicalDeviceGroups.hpp  GetPhysicalDeviceProperties2.hpp  PhysicalDeviceDriverProperties.hpp  PhysicalDeviceGroupProperties.hpp  PhysicalDeviceIdProperties.hpp  PhysicalDeviceProperties2.hpp  QueueFamilyProperties2.hpp
vulkan/include/shitty-vulkan/nv/: QueueFamilyCheckpointProperties.hpp
vulkan/include/vulkan/: API_PTR.hpp  ApplicationInfo.hpp  CreateDevice.hpp  CreateInstance.hpp  DestroyDevice.hpp  DestroyInstance.hpp  Device.hpp  DeviceCreateInfo.hpp  DeviceGroupDeviceCreateInfo.hpp  EnumerateInstanceExtensionProperties.hpp  EnumerateInstanceLayerProperties.hpp  EnumerateInstanceVersion.hpp  EnumeratePhysicalDeviceGroups.hpp  EnumeratePhysicalDevices.hpp  ExtensionProperties.hpp  Flag.hpp  GetDeviceProcAddr.hpp  GetInstanceProcAddr.hpp  GetPhysicalDeviceProperties.hpp  GetPhysicalDeviceProperties2.hpp  GetPhysicalDeviceQueueFamilyProperties.hpp  GetPhysicalDeviceQueueFamilyProperties2.hpp  InputStructure.hpp  Instance.hpp  InstanceCreateFlags.hpp  InstanceCreateInfo.hpp  LayerProperties.hpp  Offset3d.hpp  PhysicalDevice.hpp  PhysicalDeviceGroupProperties.hpp  PhysicalDeviceIdProperties.hpp  PhysicalDeviceLimits.hpp  PhysicalDeviceProperties2.hpp  PhysicalDeviceType.hpp  PrintableVersion.hpp  QueueFamilyProperties2.hpp  QueueFlagBits.hpp  Rect2d.hpp  SampleCountFlags.hpp  StructureType.hpp  (+5 more)
vulkan/include/vulkan/amd/: DeviceMemoryOverallocationCreateInfo.hpp  MemoryOverallocationBehavior.hpp
vulkan/include/vulkan/ext/: ValidationFeatureDisable.hpp  ValidationFeatureEnable.hpp  ValidationFeatures.hpp  ValidationFlags.hpp
vulkan/include/vulkan/khr/: ConformanceVersion.hpp  DeviceGroupDeviceCreateInfo.hpp  DriverId.hpp  GetPhysicalDeviceProperties2.hpp  GetPhysicalDeviceQueueFamilyProperties2.hpp  QueueFamilyProperties2.hpp  maxDriverInfoSize.hpp  maxDriverNameSize.hpp
